Ajuste campo Content

--- a/BreakingNews.Presentation.AspNetCore/Views/News/Form.cshtml
+++ b/BreakingNews.Presentation.AspNetCore/Views/News/Form.cshtml
@@ -31,9 +31,9 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.HtmlContent)
-        @Html.TextAreaFor(m => m.HtmlContent, new { @class = "form-control", autocomplete = "off" })
-        @Html.ValidationMessageFor(m => m.HtmlContent)
+        @Html.LabelFor(m => m.Content)
+        @Html.TextAreaFor(m => m.Content, new { @class = "form-control", autocomplete = "off" })
+        @Html.ValidationMessageFor(m => m.Content)
     </div>
 
     <div class="form-group">
