--- a/BreakingNews.Presentation.AspNetCore/Views/Home/Content.cshtml
+++ b/BreakingNews.Presentation.AspNetCore/Views/Home/Content.cshtml
@@ -11,6 +11,6 @@
         <p class="small">Publicado por @Model.Author em @Model.PublishDate.ToString("dd/MM/yyyy HH:mm")</p>
     </section>
     <section id="content">
-        @Model.TextContent
+        @Model.Content
     </section>
 </article>
