--- a/BreakingNews.Presentation.AspNetCore/Views/Home/Index.cshtml
+++ b/BreakingNews.Presentation.AspNetCore/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
                         <p class="small">Publicado por @item.Author em @item.PublishDate.ToString("dd/MM").</p>
                     </div>
                     <div class="entry-text">
-                        <p>@item.TextContent</p>
+                        <p>@item.Content</p>
                     </div>
                 </article>
             </div>
