--- a/BreakingNews.Presentation.AspNetCore/Views/Users/FormUsers.cshtml
+++ b/BreakingNews.Presentation.AspNetCore/Views/Users/FormUsers.cshtml
@@ -10,21 +10,24 @@
 @using (Html.BeginForm("Save", "Users", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    @Html.HiddenFor(m => m.Id)
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Id)
+        @Html.TextBoxFor(m => m.Id, new { @readonly = "", @class = "form-control", autocomplete = "off" })
+        @Html.ValidationMessageFor(m => m.Id)
+    </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.UserName)
-        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", autocomplete = "off" })
+        @Html.TextBoxFor(m => m.UserName, new { @readonly = "", @class = "form-control", autocomplete = "off" })
         @Html.ValidationMessageFor(m => m.UserName)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.Password)
-        @Html.PasswordFor(m => m.Password, new { @class = "form-control", autocomplete = "off" })
-        @Html.ValidationMessageFor(m => m.Password)
+        @Html.LabelFor(m => m.SelectedRoles)
+        @Html.ListBoxFor(m => m.SelectedRoles, Model.RolesListItems)
+        @Html.ValidationMessageFor(m => m.SelectedRoles)
     </div>
-
-    @Html.ListBoxFor(m => m.SelectedRoles, Model.Roles)
 
     <div class="form-group">
         <button class="btn btn-success" type="submit">Salvar</button>
