--- a/BreakingNews.Presentation.AspNetCore/Views/Users/Index.cshtml
+++ b/BreakingNews.Presentation.AspNetCore/Views/Users/Index.cshtml
@@ -1,29 +1,58 @@
-﻿@model IQueryable<Microsoft.AspNetCore.Identity.IdentityUser>
+﻿@model BreakingNews.Application.ViewModels.UserIndexViewModel
 
 @{
     ViewBag.Title = "Usuários";
     Layout = "_Layout";
 }
-
-<h2>Usuários</h2>
-
+<br />
+<div>
+    Ações: @Html.ActionLink("Nova Role", "NewRole", "Users", null, new { @class = "btn btn-primary" })
+</div>
+<br />
+<h1>Usuários</h1>
 <table class="table table-hover">
     <thead>
         <tr>
-            <th>Id</th>
-            <th>Nome de Usuário</th>
+            <th>Usuário</th>
             <th>Ações</th>
         </tr>
     </thead>
     <tbody>
-        @if (Model.Any())
+        @if (Model.Users.Any())
         {
-            foreach (var user in Model)
+            foreach (var user in Model.Users)
             {
                 <tr>
-                    <td>@user.Id</td>
                     <td>@user.UserName</td>
                     <td><a class="btn-sm btn-primary" href="@Url.Action("Edit", new {id = user.Id.ToUpper()})">Editar</a></td>
+                </tr>
+            }
+        }
+        else
+        {
+            <tr>
+                <td colspan="2">Não há usuários para exibir.</td>
+            </tr>
+        }
+    </tbody>
+</table>
+<br />
+<h1>Roles</h1>
+<table class="table table-hover">
+    <thead>
+        <tr>
+            <th>Role</th>
+            <th>Ações</th>
+        </tr>
+    </thead>
+    <tbody>
+        @if (Model.Roles.Any())
+        {
+            foreach (var role in Model.Roles)
+            {
+                <tr>
+                    <td>@role.Name</td>
+                    <td><a class="btn-sm btn-primary" href="@Url.Action("EditRole", new {id = role.Id.ToUpper()})">Editar</a> | <a class="btn-sm btn-danger" href="@Url.Action("DeleteRole", new {id = role.Id.ToUpper()})">Excluir</a></td>
                 </tr>
             }
         }
