--- a/BreakingNews.Presentation.AspNetCore/wwwroot/css/site.css
+++ b/BreakingNews.Presentation.AspNetCore/wwwroot/css/site.css
@@ -8,6 +8,7 @@ body {
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
+    padding-top: 10px;
     padding-left: 15px;
     padding-right: 15px;
 }
@@ -42,10 +43,27 @@ body {
 
 article h2 {
     margin: 0;
-
-    font-family: pt sans narrow,-apple-system,BlinkMacSystemFont,segoe ui,roboto,oxygen-sans,ubuntu,cantarell,helvetica neue,sans-serif;
-
     font-size: 26px;
-
     line-height: 33px;
+}
+
+input,
+select,
+textarea {
+    max-width: 280px;
+}
+
+.table {
+    max-width: 75%;
+}
+
+.field-validation-error,
+label.error {
+    color: red;
+    font-size: 12px;
+}
+
+.input-validation-error,
+input.error {
+    border: 1px solid red;
 }
