--- a/BreakingNews.Presentation.AspNetCore/Views/Users/Index.cshtml
+++ b/BreakingNews.Presentation.AspNetCore/Views/Users/Index.cshtml
@@ -6,7 +6,7 @@
 }
 <br />
 <div>
-    Ações: @Html.ActionLink("Nova Role", "NewRole", "Users", null, new { @class = "btn btn-primary" })
+    Ações: @Html.ActionLink("Novo Usuário", "New", "Users", null, new { @class = "btn btn-success" }) | @Html.ActionLink("Nova Role", "NewRole", "Users", null, new { @class = "btn btn-success" })
 </div>
 <br />
 <h1>Usuários</h1>
