--- a/BreakingNews.Presentation.AspNetCore/Views/News/Index.cshtml
+++ b/BreakingNews.Presentation.AspNetCore/Views/News/Index.cshtml
@@ -14,6 +14,7 @@
     <thead>
         <tr>
             <th>Id</th>
+            <th>URL amigável</th>
             <th>Autor</th>
             <th>Título</th>
             <th>Publicado?</th>
@@ -27,6 +28,7 @@
             {
                 <tr>
                     <td>@news.Id</td>
+                    <td>@news.FriendlyUrl</td>
                     <td>@news.Author</td>
                     <td>@news.Title</td>
                     <td>@(news.IsPublished ? "Sim" : "Não")</td>
