--- a/BreakingNews.Presentation.AspNetCore/Views/News/Index.cshtml
+++ b/BreakingNews.Presentation.AspNetCore/Views/News/Index.cshtml
@@ -6,7 +6,7 @@
 }
 <br />
 <div>
-    Ações: @Html.ActionLink("Nova notícia", "New", "News", null, new { @class = "btn btn-success" })
+    @Html.ActionLink("Criar Notícia", "New", "News", null, new { @class = "btn btn-success" })
 </div>
 <br />
 <h1>@ViewBag.Title</h1>
